# neural_vault

./: .gitignore  CHANGELOG.md  README.md  futureRelease.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/neural_vault_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
lib/: neural_vault.dart
lib/src/: exceptions.dart  neural_vault_base.dart
lib/src/models/: nv_document.dart  nv_query.dart  nv_value.dart
lib/src/query/: query_processor.dart
lib/src/storage/: file_storage.dart  file_storage_stub.dart  io_file_storage.dart  storage_stats.dart  web_file_storage.dart
rust/: Cargo.toml
rust/src/: api.rs  database.rs  error.rs  lib.rs  models.rs
rust/src/query/: mod.rs  processor.rs
rust/src/storage/: file_manager.rs  mod.rs
test/: neural_vault_test.dart
