[package]
name = "neural_vault_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (for future async operations)
tokio = { version = "1.35", features = ["full"], optional = true }

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# FFI and bridge
flutter_rust_bridge = "2.0.0"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[features]
default = []
async = ["tokio"]
